fixup! Fix continue focus ring clipped

--- a/src/assets/scss/components/_oktaSigninWidget.scss
+++ b/src/assets/scss/components/_oktaSigninWidget.scss
@@ -29,6 +29,10 @@ sign-up-modal {
   width: 100%;
   overflow: visible;
 
+  .beacon-container {
+    display: none;
+  }
+
   // ============== Container ============== //
 
   .o-form-content {
